# AgenticAI_Chatbot_withCursor

./: .gitignore  DEPLOYMENT.md  GITIGNORE_SETUP.md  KUBERNETES.md  README.md  docker-compose.prod.yml  run_tests_wsl.sh  run_wsl.sh
azure/: .gitignore  README.md  azure-pipelines.yml  build-backend.sh  build-frontend.sh  deploy-aci.sh  deploy-aks.sh  deploy-app-service.sh  deploy-backend.sh  deploy-be-aci-fe-app.sh  deploy-be-app-fe-app.sh  deploy-frontend-app-service.sh  deploy-frontend.sh  deploy.sh  env.azure.example
backend/: .dockerignore  Dockerfile  config.py  pyproject.toml
backend/app/: agent.py  location.py  main.py  schemas.py  settings.py
backend/tests/: conftest.py  test_api.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
k8s/: README.md  backend-deployment.yaml  backend-service.yaml  configmap.yaml  deploy-local.sh  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  secret.yaml.example
