[project]
name = "canada-tourist-agent-backend"
version = "0.1.0"
description = "FastAPI backend for a Canada tourist-attractions AI agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "openai>=1.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

